@startuml


Squares *-- "*" Square : -grid

abstract class Square {
    +{static}NO_COLOR:int
    +{static}model:Square
    #selected:boolean
    #special:boolean
    +{static}count:int
    +{abstract}touch(line:int, col:int):boolean
    +getColor():int
    +{static}newInstance(type:Char):Square
    +getSquare():Square
    +{abstract}isMovable():boolean
    +{abstract}isSelected():boolean
    +{abstract}checkAroundSquares(line:int, col:int)
    +{abstract}isSpecial():boolean
}

class ColorSquare {
    -color:int
    +ColorSquare(type:char)
    +isMovable():boolean
    +isSelected():boolean
    +getColor():int
    +touch(line:int col:int):boolean
    +checkAroundSquares(l:int, c:int)
    -checkAround(square:Square, l:int, c:int)
    +isSpecial():boolean
}

class BombSquare {
    #type:char
    #BombSquare(type:char)
    +isMovable():boolean
    +isSelected():boolean
    +touch(line:int, col:int):boolean
    +checkAroundSquares(l:int, c:int)
    +getColor():int
    +isSpecial():boolean
}

class VerticalSquare {
    #type:char
    #VerticalSquare(type:char)
    +touch(line:int, col:int):boolean
    +checkAroundSquares(line:int, col:int)
    +getColor():int
    +isMovable():boolean
    +isSelected():boolean
    +isSpecial():boolean
}

class HorizontalSquare {
    #type:char
    #HorizontalSquare(type:char)
    +isMovable():boolean
    +isSelected:boolean
    +touch(line:int, col:int):boolean
    +checkAroundSquare(line:int, col:int)
    +getColor():int
    +isSpecial:boolean
}

class EmptySquare {
    #type:char
    #EmptySquare(type:char)
    +touch(line:int, col:int):boolean
    +isMovable():boolean
    +isSelected():boolean
    +checkAroundSquares(line:int, col:int)
    +isSpecial():boolean
}
class JokerSquare {
     #type:char
     #EmptySquare(type:char)
     +touch(line:int, col:int):boolean
     +getColor():int
     +isMovable():boolean
     +isSelected():boolean
     +checkAroundSquares(line:int, col:int)
     +isSpecial():boolean
 }

Square <- SquareTile : square

Square <|-- ColorSquare
Square <|-- BombSquare
Square <|-- VerticalSquare
Square <|-- HorizontalSquare
Square <|-- EmptySquare
Square <|-- JokerSquare





@enduml